@@ -149,7 +149,7 @@ public class DefaultModuleWrapper implements IModuleWrapper {
             throw new IllegalArgumentException("Invalid module class type");
         }
 
-        this.module = (DefaultModule) clazz.newInstance();
+        this.module = (DefaultModule) clazz.getDeclaredConstructor().newInstance();
 
         this.module.moduleWrapper = this;
         this.module.moduleConfig = this.moduleConfiguration;
